--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Scanextract</title>
+<title>Shapextractor</title>
     <link rel="stylesheet" type="text/css" href="./PLY Viewer/style.css">
   <body>   
 
-	<h2>Scanextract PLY Viewer</h2>
+	<h2>Shapextractor PLY Viewer</h2>
 	
 	<div style="width: 100%; text-align:center">	<br>
 
