--- a/start.htm
+++ b/start.htm
@@ -41,15 +41,15 @@ laser Power</br>
 crop</br>
 <input id="Crop_height" type="range" min="100" max="480" step="1" value="0" onchange="printValue('Crop_height','v2')"/><input id="v2" type="text" size="5" value="0"/></br>
 Quality</br>
-<input id="Quality" type="range" min="0" max="2" step="1" onchange="printValue('Quality','v3')"/><input id="v3" type="text" size="5" value="0"/></br>
+<input id="Quality" type="range" min="0" max="2" step="1" value="0" onchange="printValue('Quality','v3')"/><input id="v3" type="text" size="5" value="0"/></br>
 laser offset:</br>
-<input id="Laser_offset" type="range" min="0" max="45" step="0.1" value="45" onchange="printValue('Laser_offset','v4')"/><input id="v4" type="text" size="5" value="45"/></br>
+<input id="Laser_offset" type="range" min="0" max="70" step="0.1" value="45" onchange="printValue('Laser_offset','v4')"/><input id="v4" type="text" size="5" value="45"/></br>
 camera distance:</br>
-<input id="CAMERA_DISTANCE" type="range" min="0" max="100" step="0.1"  value="0.30" onchange="printValue('Camera_distance','v5')"/><input id="v5" type="text" size="5" value="0.30"/></br>
+<input id="CAMERA_DISTANCE" type="range" min="0" max="3" step="0.1"  value="0.3" onchange="printValue('CAMERA_DISTANCE','v5')"/><input id="v5" type="text" size="5" value="0.30"/></br>
 horizontal avrange:</br>
-<input id="HORIZ_AVG" type="range" min="1" max="15" step="10" value="2" onchange="printValue('HORIZ_AVG','v6')"/><input id="v6" type="text" size="5"  value="2"/></br>
+<input id="HORIZ_AVG" type="range" min="1" max="15" step="1" value="2" onchange="printValue('HORIZ_AVG','v6')"/><input id="v6" type="text" size="5"  value="2"/></br>
 Vertical avrange:</br>
-<input id="VERT_AVG" type="range" min="1" max="15" step="10" value="2"  onchange="printValue('VERT_AVG','v7')"/><input id="v7" type="text" size="5"  value="2"/></br>
+<input id="VERT_AVG" type="range" min="1" max="15" step="1" value="2"  onchange="printValue('VERT_AVG','v7')"/><input id="v7" type="text" size="5"  value="2"/></br>
 </br></br>
 <a href="#" class="button">Start Scan</a>
 </center>
