--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
     <link rel="stylesheet" type="text/css" href="./PLY Viewer/style.css">
   <body>   
 
-	<h2>Shapextractor PLY Viewer</h2>
+	<h2>Shapextractor Menu</h2>
 	
 	<div style="width: 100%; text-align:center">	<br>
+	<a href="./start.htm"><img src="./PLY Viewer/start.jpg"/></a> <br><br><br>
 
