--- a/start.htm
+++ b/start.htm
@@ -14,45 +14,78 @@
 
         window.onload = function() { printValue('slider1', 'rangeValue1'); printValue('slider2', 'rangeValue2'); printValue('slider3', 'rangeValue3'); printValue('slider4', 'rangeValue4'); }
     </script>
-    <script src="./PLY Viewer/xbps.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/psapi.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/mjs.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/asc.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/psi.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/pts.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/ply.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/hps0.js"></script><script language="javascript" type="text/javascript" src="./PLY Viewer/psi2.js"></script><script type="text/javascript" src="./PLY Viewer/psapi.js"></script><script type="text/javascript" src="./PLY Viewer/mjs.js"></script><script type="text/javascript" src="./PLY Viewer/asc.js"></script><script type="text/javascript" src="./PLY Viewer/psi.js"></script><script type="text/javascript" src="./PLY Viewer/pts.js"></script><script type="text/javascript" src="./PLY Viewer/ply.js"></script><script type="text/javascript" src="./PLY Viewer/hps0.js"></script><script type="text/javascript" src="./PLY Viewer/psi2.js"></script>
-    <script src="./PLY Viewer/orbitcam.js"></script>
-    <script src="./PLY Viewer/ply.js"></script>
-    <script src="./PLY Viewer/PLYviewer.js"></script>
+
   <style type="text/css"></style></head>
 
   <body onload="start();">   
    
 	<h2>Shapextractor:</h2>
 	
- 
-<input id="A" type="hidden" value="9"/>
-<input id="An" type="hidden" value="9"/>
-<input id="B" type="hidden" value="9"/>
-<input id="Bn" type="hidden" value="9"/>
-<input id="Laser" type="hidden" value="9"/>
-<input id="Light" type="hidden" value="9"/>
-<input id="delay" type="hidden" value="0.002"/>
-<input id="FRAME_SKIP" type="hidden" value="1"/>
-<input id="POINT_SKIP" type="hidden" value="1"/>
-<center>
 
-laser Power</br>
-<input id="LPWM" type="range" min="0" max="255" step="1" value="12" onchange="printValue('LPWM','v1')"/><input id="v1" type="text" size="5" value="12"/></br>
-crop</br>
-<input id="Crop_height" type="range" min="100" max="480" step="1" value="0" onchange="printValue('Crop_height','v2')"/><input id="v2" type="text" size="5" value="0"/></br>
-Quality</br>
-<input id="Quality" type="range" min="0" max="2" step="1" value="0" onchange="printValue('Quality','v3')"/><input id="v3" type="text" size="5" value="0"/></br>
-laser offset:</br>
-<input id="Laser_offset" type="range" min="0" max="70" step="0.1" value="45" onchange="printValue('Laser_offset','v4')"/><input id="v4" type="text" size="5" value="45"/></br>
-camera distance:</br>
-<input id="CAMERA_DISTANCE" type="range" min="0" max="3" step="0.1"  value="0.3" onchange="printValue('CAMERA_DISTANCE','v5')"/><input id="v5" type="text" size="5" value="0.30"/></br>
-horizontal avrange:</br>
-<input id="HORIZ_AVG" type="range" min="1" max="15" step="1" value="2" onchange="printValue('HORIZ_AVG','v6')"/><input id="v6" type="text" size="5"  value="2"/></br>
-Vertical avrange:</br>
-<input id="VERT_AVG" type="range" min="1" max="15" step="1" value="2"  onchange="printValue('VERT_AVG','v7')"/><input id="v7" type="text" size="5"  value="2"/></br>
-</br></br>
-<a href="#" class="button">Start Scan</a>
+<form action="./cgi-bin/Shapextractorweb.py" method="post" target="_self">
+<p>
+  <input name="A" id="A" type="hidden" value="9"/>
+  <input name="An" id="An" type="hidden" value="25"/>
+  <input name="B" id="B" type="hidden" value="11"/>
+  <input name="Bn" id="Bn" type="hidden" value="8"/>
+  <input name="LASER" id="LASER" type="hidden" value="18"/>
+  <input name="LIGHT" id="LIGHT" type="hidden" value="7"/>
+  <input name="DELAY" id="DELAY" type="hidden" value="0.002"/>
+  <input name="FRAME_SKIP" id="FRAME_SKIP" type="hidden" value="1"/>
+  <input name="POINT_SKIP" id="POINT_SKIP" type="hidden" value="1"/>
+  <input name="RESW" id="RESW" type="hidden" value="640"/>
+  <input name="RESH" id="RESH" type="hidden" value="480"/>
+</p>
+<table width="70%" height="86" border="0" align="center">
+  <tr>
+    <td align="center"><img src="./PLY Viewer/demo.jpg"></td>
+    <td><p>Horizontal avrange:</br>
+      <input name="HORIZ_AVG" id="HORIZ_AVG" type="range" min="1" max="15" step="1" value="2" onchange="printValue('HORIZ_AVG','v6')"/>
+      <input id="v6" type="text" size="5"  value="2"/>
+    </p>
+      <p>Vertical avrange:</br>
+        <input name="VERT_AVG" id="VERT_AVG" type="range" min="1" max="15" step="1" value="2"  onchange="printValue('VERT_AVG','v7')"/>
+        <input id="v7" type="text" size="5"  value="2"/>
+      </p>
+      <p>Quality:</br>        
+        <input name="QUALITY" id="QUALITY" type="range" min="0" max="2" step="1" value="0" onchange="printValue('QUALITY','v3')"/>
+        <input id="v3" type="text" size="5" value="0"/>
+      </p></td>
+	      <td><p>Laser offset:</br>
+      <input name="LASER_OFFSET" id="LASER_OFFSET" type="range" min="0" max="70" step="0.1" value="45" onchange="printValue('LASER_OFFSET','v4')"/>
+      <input id="v4" type="text" size="5" value="45"/>
+      <p>Rotate camera:</br>
+        <input name="ROT" id="ROT" type="range" min="0" max="90" step="90" value="0" onchange="printValue('ROT','v8')"/>
+        <input id="v8" type="text" size="5" value="0"/>
+        </br>
+        </p>
+      <p>Camera HFOV:</br>
+  <input name="CAMERA_HFOV" id="CAMERA_HFOV" type="range" min="0" max="100" step="1" value="50" onchange="printValue('CAMERA_HFOV','v9')"/>
+        <input id="v9" type="text" size="5" value="50"/>
+        </br>
+        </p>
+      <p>Camera distance:</br>
+        <input name="CAMERA_DISTANCE" id="CAMERA_DISTANCE" type="range" min="0" max="3" step="0.01"  value="0.3" onchange="printValue('CAMERA_DISTANCE','v5')"/>
+        <input id="v5" type="text" size="5" value="0.30"/>
+      </p>
+</br></td>
+
+  </tr>
+  <tr>
+<td align="center"><p>Crop:</br>
+  <input name="CROPH" id="CROPH" type="range" min="0" max="480" step="1" value="0" onChange="printValue('CROPH','v2')"/>
+  <input id="v2" type="text" size="5" value="0"/>
+  </p>
+  <p>Laser Power:</br>
+    <input name="LPWM" id="LPWM" type="range" min="0" max="255" step="1" value="12" onChange="printValue('LPWM','v1')"/>
+    <input id="v1" type="text" size="5" value="12"/>
+  </p></td> <td colspan="2" align="center" valign="top"><input type="submit" class="button" value="Start Scan" /></td>    
+  </tr>
+</table>
+<p>&nbsp; </p>
+<center>
 </center>
+</form>
 
 	</strong></div><strong>
 </strong></body></html>
