update for wiki

--- a/startip.htm
+++ b/startip.htm
@@ -38,7 +38,7 @@
 </p>
 <table width="90%"  border="0" align="center">
   <tr>
-    <td align="center"> <iframe width="640" height="480" style="z-index:3" src="http://192.168.1.107:8080/?action=stream" scrolling="no"></iframe><div style="position: relative; left: 0px; top: -485px; overflow: auto;">
+    <td align="center"> <iframe width="640" height="480" style="z-index:3" src="webcam/?action=stream" scrolling="no"></iframe><div style="position: relative; left: 0px; top: -485px; overflow: auto;">
                         <img src="./PLY Viewer/line.png"/></div>
                         </td>
     <td align="center" valign="top"><p>Horizontal avrange:</br>
